// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ok parse_to_normalization_ast 1`] = `
"{
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Operation\\",
  \\"name\\": \\"MyQuery\\",
  \\"selections\\": [
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"concreteType\\": \\"User\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"me\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"kind\\": \\"ScalarField\\",
          \\"name\\": \\"name\\",
          \\"storageKey\\": null
        },
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"kind\\": \\"ScalarField\\",
          \\"name\\": \\"age\\",
          \\"storageKey\\": null
        },
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"User\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"best_friend\\",
          \\"plural\\": false,
          \\"selections\\": [
            {
              \\"alias\\": null,
              \\"args\\": null,
              \\"kind\\": \\"ScalarField\\",
              \\"name\\": \\"age\\",
              \\"storageKey\\": null
            }
          ],
          \\"storageKey\\": null
        }
      ],
      \\"storageKey\\": null
    }
  ]
}"
`;

exports[`Ok parse_to_reader_ast @required 1`] = `
"{
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Fragment\\",
  \\"metadata\\": null,
  \\"name\\": \\"AgeFragment\\",
  \\"selections\\": [
    {
      \\"kind\\": \\"RequiredField\\",
      \\"field\\": {
        \\"alias\\": null,
        \\"args\\": null,
        \\"kind\\": \\"ScalarField\\",
        \\"name\\": \\"age\\",
        \\"storageKey\\": null
      },
      \\"action\\": \\"LOG\\",
      \\"path\\": \\"age\\"
    }
  ],
  \\"type\\": \\"User\\",
  \\"abstractKey\\": null
}"
`;

exports[`Ok parse_to_reader_ast 1`] = `
"{
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Fragment\\",
  \\"metadata\\": null,
  \\"name\\": \\"AgeFragment\\",
  \\"selections\\": [
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"kind\\": \\"ScalarField\\",
      \\"name\\": \\"age\\",
      \\"storageKey\\": null
    }
  ],
  \\"type\\": \\"User\\",
  \\"abstractKey\\": null
}

{
  \\"argumentDefinitions\\": [],
  \\"kind\\": \\"Operation\\",
  \\"name\\": \\"MyQuery\\",
  \\"selections\\": [
    {
      \\"alias\\": null,
      \\"args\\": null,
      \\"concreteType\\": \\"User\\",
      \\"kind\\": \\"LinkedField\\",
      \\"name\\": \\"me\\",
      \\"plural\\": false,
      \\"selections\\": [
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"kind\\": \\"ScalarField\\",
          \\"name\\": \\"name\\",
          \\"storageKey\\": null
        },
        {
          \\"args\\": null,
          \\"kind\\": \\"FragmentSpread\\",
          \\"name\\": \\"AgeFragment\\"
        },
        {
          \\"alias\\": null,
          \\"args\\": null,
          \\"concreteType\\": \\"User\\",
          \\"kind\\": \\"LinkedField\\",
          \\"name\\": \\"best_friend\\",
          \\"plural\\": false,
          \\"selections\\": [
            {
              \\"args\\": null,
              \\"kind\\": \\"FragmentSpread\\",
              \\"name\\": \\"AgeFragment\\"
            }
          ],
          \\"storageKey\\": null
        }
      ],
      \\"storageKey\\": null
    }
  ]
}"
`;

exports[`Ok transform 1`] = `
"query MyQuery {
  me {
    name
    ...AgeFragment
    best_friend {
      ...AgeFragment
    }
  }
}

fragment AgeFragment on User {
  age
}"
`;

exports[`Ok types (flow) 1`] = `
"import type { FragmentReference } from \\"relay-runtime\\";
declare export opaque type AgeFragment$ref: FragmentReference;
declare export opaque type AgeFragment$fragmentType: AgeFragment$ref;
export type AgeFragment = {|
  +age: ?number,
  +$refType: AgeFragment$ref,
|};
export type AgeFragment$data = AgeFragment;
export type AgeFragment$key = {
  +$data?: AgeFragment$data,
  +$fragmentRefs: AgeFragment$ref,
  ...
};


import type { AgeFragment$ref } from \\"AgeFragment.graphql\\";
export type MyQueryVariables = {||};
export type MyQueryResponse = {|
  +me: ?{|
    +name: ?string,
    +best_friend: ?{|
      +$fragmentRefs: AgeFragment$ref,
    |},
    +$fragmentRefs: AgeFragment$ref,
  |},
|};
export type MyQuery = {|
  variables: MyQueryVariables,
  response: MyQueryResponse,
|};
"
`;

exports[`Ok types (typescript) 1`] = `
"import { FragmentRefs } from \\"relay-runtime\\";
export type AgeFragment = {
  readonly age: number | null;
  readonly \\" $refType\\": \\"AgeFragment\\";
};
export type AgeFragment$data = AgeFragment;
export type AgeFragment$key = {
  readonly \\" $data\\"?: AgeFragment$data;
  readonly \\" $fragmentRefs\\": FragmentRefs<\\"AgeFragment\\">;
};


import { FragmentRefs } from \\"relay-runtime\\";
export type MyQueryVariables = {};
export type MyQueryResponse = {
  readonly me: {
    readonly name: string | null;
    readonly best_friend: {
      readonly \\" $fragmentRefs\\": FragmentRefs<\\"AgeFragment\\">;
    } | null;
    readonly \\" $fragmentRefs\\": FragmentRefs<\\"AgeFragment\\">;
  } | null;
};
export type MyQuery = {
  variables: MyQueryVariables;
  response: MyQueryResponse;
};
"
`;
